Added readme, gitignore, removed pycache

--- a/tasks/templates/users/home.html
+++ b/tasks/templates/users/home.html
@@ -13,7 +13,7 @@ Home
             </p>
             <hr class="my-4">
             <p>
-                Made by Pratik Anand (2k17/CO/235) and Priyansh Verma (2k17/CO/246)
+                Login or register to continue
             </p>
             <a class="btn btn-primary btn-lg" href="{% url 'login_view' %}" role="button">Login</a>
             <a class="btn btn-dark btn-lg" href="{% url 'register_view' %}" role="button">Register</a>
