--- a/tasks/templates/users/register.html
+++ b/tasks/templates/users/register.html
@@ -19,7 +19,7 @@ Register
                         {{ error }}
                     {% endif %}
                     {{ form.as_p }}
-                    <input type="submit" class="btn btn-primary btn-lg" value="Register">
+                    <input type="submit" class="btn btn-info btn-lg" value="Register">
                     
                 </form>
             </div>
