--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -10,16 +10,16 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <title>{% block title %}{% endblock %} | Taskmaster</title>
     </head>
-    <body>
-        <nav class="navbar sticky-top navbar-dark bg-primary py-lg-3">
+    <body style="height: inherit;">
+        <nav class="navbar sticky-top navbar-dark bg-info py-lg-2">
             <div class="container-lg">
                 <div class="d-flex flex-row">
-                    <a class="navbar-brand" href="{% url 'home' %}">Taskmaster</a>
+                    <i class="fab fa-tumblr"> | <a class="navbar-brand" href="{% url 'home' %}">Taskmaster</a></i>
                 </div>
                 <div class="d-flex flex-row-reverse">
                     {% if user.is_authenticated %}
                         <a class="nav-link text-light" href="{% url 'logout_view' %}">Logout</a>
-                        <a class="nav-link text-light" href="{% url 'dash' %}">Hey, {{ user.username|title }}</a>
+                        <a class="nav-link text-light" href="{% url 'dash' %}">Hey, {{ user.username }}</a>
                     {% else %}
                         <a class="nav-link text-light" href="{% url 'login_view' %}">Login</a>
                         <a class="nav-link text-light" href="{% url 'register_view' %}">Register</a>
