--- a/tasks/templates/tasks/edit.html
+++ b/tasks/templates/tasks/edit.html
@@ -5,13 +5,48 @@ Edit task
 {% endblock %}
 
 {% block content %}
-    <h3>Update {{ task.title }}</h3>
+    <!-- <h3>Update {{ task.title }}</h3> -->
+    <div class="container"  style="padding-top: 2em; padding-left: 20%;">
+        <!-- <div class="justify-content-center align-items-center"> -->
+        <div class="row">
+            <div class="col-md-offset-3">
+                <h3 class="display-3">
+                    <small class="text-muted">Update </small>
+                    Task
+                </h3>
+                <hr>
+                            
+                <form method="POST">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label><strong>Edit title</strong></label>
+                        <br>
+                        {{form.title}}
+                    </div>
+                    <div class="form-group">
+                        <label><strong>Edit description</strong></label>
+                        <br>
+                        {{form.description}}
+                    </div>
+                    <div class="form-group">
+                        <label><strong>Completed yet?</strong> </label>
+                        {{form.complete}}
+                    </div>
+                    <div class="form-group">
+                        <label><strong>Edit deadline</strong></label>
+                        {{form.deadline}}
+                    </div>
+                    {{form.owner}}
+                    <input type="submit" value="Update Task" class="btn btn-info" style="padding-right: 43%; padding-left: 43%;">
+                    
+                </form>
+                <hr>
+                <a href="{% url 'dash' %}">Back to dashboard</a>
 
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Update">
-    </form>
 
-    <a href="{% url 'dash' %}">Back to dashboard</a>
+            </div>
+        </div>
+    </div>
+
+
 {% endblock %}
