--- a/tasks/templates/users/dash.html
+++ b/tasks/templates/users/dash.html
@@ -32,7 +32,7 @@ Dash
                             {{form.deadline}}
                         </div>
                         {{form.owner}}
-                        <input type="submit" value="Add task" class="btn btn-info" style="padding-left: 42%; padding-right: 42%;">
+                        <input type="submit" value="Add task" class="btn btn-info w-100">
                     
                     </form>
                 </div>
