--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <title>{% block title %}{% endblock %} | Taskmaster</title>
     </head>
-    <body style="height: inherit;">
+    <body style="height: inherit; background: #E9ECEF;">
         <nav class="navbar sticky-top navbar-dark bg-info py-lg-2">
             <div class="container-lg">
                 <div class="d-flex flex-row">
